# jsonldb

./: .gitignore  .python-version  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/jsonldb/: __init__.py  compactor.py  database.py  index.py  record.py  wal.py
tests/: test_database.py
