[project]
name = "jsonldb"
version = "0.1.0"
description = "A NoSQL database built on JSONL format with LMDB indexing and WAL for durability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lmdb>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black==25.12.0",
    "isort==7.0.0",
    "flake8==7.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
